# leptos-wasm-camera-example

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
src/: camera.rs  main.rs
